--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.10.2",
+    "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "standard": "^14.3.1",
     "tachyons": "^4.11.1"
   },
   "scripts": {
