--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.10.2",
     "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "standard": "^14.3.1",
     "tachyons": "^4.11.1"
   },
